final run through

--- a/latex/annotated.tex
+++ b/latex/annotated.tex
@@ -56,6 +56,7 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\mbox{\hyperlink{classmetaheuristics_1_1generators_1_1_instance_g_a}{metaheuristics.\+generators.\+Instance\+GA}} }{\pageref{classmetaheuristics_1_1generators_1_1_instance_g_a}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classmetaheuristics_1_1generators_1_1_limit_roulette}{metaheuristics.\+generators.\+Limit\+Roulette}} }{\pageref{classmetaheuristics_1_1generators_1_1_limit_roulette}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classmetaheuristics_1_1generators_1_1_limit_threshold}{metaheuristics.\+generators.\+Limit\+Threshold}} }{\pageref{classmetaheuristics_1_1generators_1_1_limit_threshold}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classapp_1_1_main}{app.\+Main}} }{\pageref{classapp_1_1_main}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classproblem_1_1extension_1_1_metricas_multiobjetivo}{problem.\+extension.\+Metricas\+Multiobjetivo}} }{\pageref{classproblem_1_1extension_1_1_metricas_multiobjetivo}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classmetaheuristics_1_1generators_1_1_multi_case_simulated_annealing}{metaheuristics.\+generators.\+Multi\+Case\+Simulated\+Annealing}} }{\pageref{classmetaheuristics_1_1generators_1_1_multi_case_simulated_annealing}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classmetaheuristics_1_1generators_1_1_multi_generator}{metaheuristics.\+generators.\+Multi\+Generator}} }{\pageref{classmetaheuristics_1_1generators_1_1_multi_generator}}{}
@@ -94,7 +95,7 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\mbox{\hyperlink{classproblem_1_1definition_1_1_state}{problem.\+definition.\+State}} }{\pageref{classproblem_1_1definition_1_1_state}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classevolutionary__algorithms_1_1complement_1_1_steady_state_replace}{evolutionary\+\_\+algorithms.\+complement.\+Steady\+State\+Replace}} }{\pageref{classevolutionary__algorithms_1_1complement_1_1_steady_state_replace}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classlocal__search_1_1complement_1_1_stop_execute}{local\+\_\+search.\+complement.\+Stop\+Execute}} }{\pageref{classlocal__search_1_1complement_1_1_stop_execute}}{}
-\item\contentsline{section}{\mbox{\hyperlink{classmetaheurictics_1_1strategy_1_1_strategy}{metaheurictics.\+strategy.\+Strategy}} }{\pageref{classmetaheurictics_1_1strategy_1_1_strategy}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classmetaheuristics_1_1strategy_1_1_strategy}{metaheuristics.\+strategy.\+Strategy}} }{\pageref{classmetaheuristics_1_1strategy_1_1_strategy}}{}
 \item\contentsline{section}{\mbox{\hyperlink{enumlocal__search_1_1complement_1_1_strategy_type}{local\+\_\+search.\+complement.\+Strategy\+Type}} }{\pageref{enumlocal__search_1_1complement_1_1_strategy_type}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classmetaheuristics_1_1generators_1_1_tabu_search}{metaheuristics.\+generators.\+Tabu\+Search}} }{\pageref{classmetaheuristics_1_1generators_1_1_tabu_search}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classlocal__search_1_1complement_1_1_tabu_solutions}{local\+\_\+search.\+complement.\+Tabu\+Solutions}} }{\pageref{classlocal__search_1_1complement_1_1_tabu_solutions}}{}
