--- a/latex/refman.tex
+++ b/latex/refman.tex
@@ -293,6 +293,7 @@
 \input{classmetaheuristics_1_1generators_1_1_instance_g_a}
 \input{classmetaheuristics_1_1generators_1_1_limit_roulette}
 \input{classmetaheuristics_1_1generators_1_1_limit_threshold}
+\input{classapp_1_1_main}
 \input{classproblem_1_1extension_1_1_metricas_multiobjetivo}
 \input{classmetaheuristics_1_1generators_1_1_multi_case_simulated_annealing}
 \input{classmetaheuristics_1_1generators_1_1_multi_generator}
@@ -331,7 +332,7 @@
 \input{classproblem_1_1definition_1_1_state}
 \input{classevolutionary__algorithms_1_1complement_1_1_steady_state_replace}
 \input{classlocal__search_1_1complement_1_1_stop_execute}
-\input{classmetaheurictics_1_1strategy_1_1_strategy}
+\input{classmetaheuristics_1_1strategy_1_1_strategy}
 \input{enumlocal__search_1_1complement_1_1_strategy_type}
 \input{classmetaheuristics_1_1generators_1_1_tabu_search}
 \input{classlocal__search_1_1complement_1_1_tabu_solutions}
