--- a/latex/hierarchy.tex
+++ b/latex/hierarchy.tex
@@ -95,6 +95,7 @@ This inheritance list is sorted roughly, but not completely, alphabetically\+:\b
 \item \contentsline{section}{factory\+\_\+method.\+Factory\+Sampling }{\pageref{classfactory__method_1_1_factory_sampling}}{}
 \end{DoxyCompactList}
 \item \contentsline{section}{metaheuristics.\+generators.\+Limit\+Roulette }{\pageref{classmetaheuristics_1_1generators_1_1_limit_roulette}}{}
+\item \contentsline{section}{app.\+Main }{\pageref{classapp_1_1_main}}{}
 \item \contentsline{section}{problem.\+extension.\+Metricas\+Multiobjetivo }{\pageref{classproblem_1_1extension_1_1_metricas_multiobjetivo}}{}
 \item \contentsline{section}{evolutionary\+\_\+algorithms.\+complement.\+Mutation }{\pageref{classevolutionary__algorithms_1_1complement_1_1_mutation}}{}
 \begin{DoxyCompactList}
@@ -143,7 +144,7 @@ This inheritance list is sorted roughly, but not completely, alphabetically\+:\b
 \end{DoxyCompactList}
 \item \contentsline{section}{problem.\+definition.\+State }{\pageref{classproblem_1_1definition_1_1_state}}{}
 \item \contentsline{section}{local\+\_\+search.\+complement.\+Stop\+Execute }{\pageref{classlocal__search_1_1complement_1_1_stop_execute}}{}
-\item \contentsline{section}{metaheurictics.\+strategy.\+Strategy }{\pageref{classmetaheurictics_1_1strategy_1_1_strategy}}{}
+\item \contentsline{section}{metaheuristics.\+strategy.\+Strategy }{\pageref{classmetaheuristics_1_1strategy_1_1_strategy}}{}
 \item \contentsline{section}{local\+\_\+search.\+complement.\+Strategy\+Type }{\pageref{enumlocal__search_1_1complement_1_1_strategy_type}}{}
 \item \contentsline{section}{local\+\_\+search.\+complement.\+Tabu\+Solutions }{\pageref{classlocal__search_1_1complement_1_1_tabu_solutions}}{}
 \item \contentsline{section}{config.\+tsp\+Dynamic.\+TSPState }{\pageref{classconfig_1_1tsp_dynamic_1_1_t_s_p_state}}{}
